--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,12 +2,12 @@
 
   <div class="wrap">
 
-    <h2 class="footer-heading">{{ site.title }}</h2>
+    <!--h2 class="footer-heading">{{ site.title }}</h2-->
 
     <div class="footer-col-1 column">
       <ul>
-        <li>{{ site.title }}</li>
-        <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+        <li><a href="http://forum.mtasa.com/viewtopic.php?f=108&t=30494">Forum Topic</a></li>
+        <li><a href="http://community.mtasa.com/index.php?p=resources&s=comments&id=3716">Community Resource Page</a></li>
       </ul>
     </div>
 
@@ -29,7 +29,7 @@
                 c0,0.208,0.14,0.449,0.534,0.373c3.081-1.028,5.302-3.935,5.302-7.362C15.76,3.906,12.285,0.431,7.999,0.431z"/>
               </svg>
             </span>
-            <span class="username">{{ site.username }}</span>
+            <!--span class="username">{{ site.username }}</span-->
           </a>
         </li>
         <li>
