--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -32,7 +32,7 @@
             <span class="username">{{ site.username }}</span>
           </a>
         </li>
-        <li>
+        <!--li>
           <a href="https://youtube.com">
             <span class="icon youtube">
               <svg version="1.1" class="twitter-icon-svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
@@ -46,9 +46,9 @@
                 c6.015,0,9.304-4.983,9.304-9.304c0-0.142-0.003-0.283-0.009-0.423C14.976,4.29,15.531,3.714,15.969,3.058z"/>
               </svg>
             </span>
-            <span class="username">...</span>
+            <span class="username">{{ site.username }}</span>
           </a>
-        </li>
+        </li-->
       </ul>
     </div>
 
